// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EventListFilters /> renders correctly 1`] = `
<Row
  bsClass="row"
  className="align-items-center d-flex flex-wrap"
  componentClass="div"
>
  <EventListFilters__StatusContainer
    md={5}
    smHidden={true}
    xs={4}
    xsHidden={true}
  >
    <ForwardRef(Relay(EventListCounter))
      query={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
        }
      }
    />
    <Connect(EventListStatusFilter) />
  </EventListFilters__StatusContainer>
  <EventListFilters__FiltersWrapper
    id="event-filters"
    md={4}
    xs={12}
  >
    <div
      className="pull-right"
    >
      <FiltersContainer
        filterCount={2}
        overlay={
          <div>
            <p>
              <b>
                <FormattedMessage
                  id="filter-by"
                  values={Object {}}
                />
              </b>
            </p>
            <form>
              <Col
                bsClass="col"
                className="mt-5"
                componentClass="div"
              >
                <div>
                  <div
                    className="visible-xs-block visible-sm-block"
                  >
                    <Field
                      addonAfter={
                        <i
                          className="cap cap-magnifier"
                        />
                      }
                      aria-autocomplete="list"
                      aria-controls="event-search-input-listbox"
                      aria-haspopup="true"
                      clearable={true}
                      component={[Function]}
                      groupClassName="event-search-group pull-right"
                      id="event-search-input"
                      name="search"
                      placeholder="proposal-search"
                      role="combobox"
                      type="text"
                    />
                  </div>
                </div>
              </Col>
              <Col
                bsClass="col"
                className="mt-5"
                componentClass="div"
              >
                <div>
                  <Field
                    aria-autocomplete="list"
                    aria-controls="EventListFilters-filter-userType-listbox"
                    aria-haspopup="true"
                    component={[Function]}
                    id="EventListFilters-filter-userType"
                    name="userType"
                    options={
                      Array [
                        Object {
                          "label": "Citoyen",
                          "value": "userType-1",
                        },
                        Object {
                          "label": "Institution",
                          "value": "userType-2",
                        },
                      ]
                    }
                    placeholder="filter-userType"
                    role="combobox"
                  />
                </div>
              </Col>
              <Col
                bsClass="col"
                className="mt-5"
                componentClass="div"
              >
                <div>
                  <Button
                    active={false}
                    block={false}
                    bsClass="btn"
                    bsStyle="link"
                    className="p-0"
                    disabled={false}
                    onClick={[Function]}
                  >
                    <FormattedMessage
                      id="reset-filters"
                      values={Object {}}
                    />
                  </Button>
                </div>
              </Col>
            </form>
          </div>
        }
        type="event"
      />
    </div>
    <Connect(EventListToggleMobileViewBtn)
      isMobileListView={true}
      onChange={[Function]}
      showMapButton={true}
    />
  </EventListFilters__FiltersWrapper>
  <Col
    bsClass="col"
    componentClass="div"
    md={3}
    smHidden={true}
    xs={4}
    xsHidden={true}
  >
    <form
      onSubmit={[Function]}
    >
      <Field
        addonAfter={
          <i
            className="cap cap-magnifier"
          />
        }
        component={[Function]}
        divClassName="event-search-group pull-right w-100"
        id="event-search-input"
        name="search"
        placeholder="proposal-search"
        type="text"
      />
    </form>
  </Col>
</Row>
`;

exports[`<EventListFilters /> renders correctly without filters 1`] = `
<Row
  bsClass="row"
  className="align-items-center d-flex flex-wrap"
  componentClass="div"
>
  <EventListFilters__StatusContainer
    md={5}
    smHidden={true}
    xs={4}
    xsHidden={true}
  >
    <ForwardRef(Relay(EventListCounter))
      query={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
        }
      }
    />
    <Connect(EventListStatusFilter) />
  </EventListFilters__StatusContainer>
  <EventListFilters__FiltersWrapper
    id="event-filters"
    md={4}
    xs={12}
  >
    <div
      className="pull-right"
    >
      <FiltersContainer
        filterCount={2}
        overlay={
          <div>
            <p>
              <b>
                <FormattedMessage
                  id="filter-by"
                  values={Object {}}
                />
              </b>
            </p>
            <form>
              <Col
                bsClass="col"
                className="mt-5"
                componentClass="div"
              >
                <div>
                  <div
                    className="visible-xs-block visible-sm-block"
                  >
                    <Field
                      addonAfter={
                        <i
                          className="cap cap-magnifier"
                        />
                      }
                      aria-autocomplete="list"
                      aria-controls="event-search-input-listbox"
                      aria-haspopup="true"
                      clearable={true}
                      component={[Function]}
                      groupClassName="event-search-group pull-right"
                      id="event-search-input"
                      name="search"
                      placeholder="proposal-search"
                      role="combobox"
                      type="text"
                    />
                  </div>
                </div>
              </Col>
              <Col
                bsClass="col"
                className="mt-5"
                componentClass="div"
              >
                <div>
                  <Field
                    aria-autocomplete="list"
                    aria-controls="EventListFilters-filter-userType-listbox"
                    aria-haspopup="true"
                    component={[Function]}
                    id="EventListFilters-filter-userType"
                    name="userType"
                    options={
                      Array [
                        Object {
                          "label": "Citoyen",
                          "value": "userType-1",
                        },
                        Object {
                          "label": "Institution",
                          "value": "userType-2",
                        },
                      ]
                    }
                    placeholder="filter-userType"
                    role="combobox"
                  />
                </div>
              </Col>
              <Col
                bsClass="col"
                className="mt-5"
                componentClass="div"
              >
                <div>
                  <Button
                    active={false}
                    block={false}
                    bsClass="btn"
                    bsStyle="link"
                    className="p-0"
                    disabled={false}
                    onClick={[Function]}
                  >
                    <FormattedMessage
                      id="reset-filters"
                      values={Object {}}
                    />
                  </Button>
                </div>
              </Col>
            </form>
          </div>
        }
        type="event"
      />
    </div>
  </EventListFilters__FiltersWrapper>
  <Col
    bsClass="col"
    componentClass="div"
    md={3}
    smHidden={true}
    xs={4}
    xsHidden={true}
  >
    <form
      onSubmit={[Function]}
    >
      <Field
        addonAfter={
          <i
            className="cap cap-magnifier"
          />
        }
        component={[Function]}
        divClassName="event-search-group pull-right w-100"
        id="event-search-input"
        name="search"
        placeholder="proposal-search"
        type="text"
      />
    </form>
  </Col>
</Row>
`;
